--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,6 +1,10 @@
 
-<div class="container mt-4 d-flex justify-content-center">
+<div class="container mt-4 d-flex justify-content-center flex-column">
+    <div>
+        <app-slider></app-slider>
+    </div>
     <div class="container pb-4 mt-5 mb-5 bg-white" >
+        
         <div class="row d-flex justify-content-center">
             <div class="col-10 mt-4">
                 <label >{{'search_name' | translate}}</label>
