--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,5 +1,5 @@
 
-<div class="container mt-4 d-flex justify-content-center flex-column">
+<div class="d-flex justify-content-center flex-column">
     <div>
         <app-slider></app-slider>
     </div>
