--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,29 +1,29 @@
-<!-- <ngb-carousel *ngIf="images">
-    <ng-template ngbSlide>
-      <div class="wrapper">
-        <img [src]="images[0]" alt="Random first slide">
-      </div>
-      <div class="carousel-caption">
-        <h3>First Slide</h3>
-        <p> Angular 10 Carousel Example </p>
-      </div>
-    </ng-template>
-    <ng-template ngbSlide>
-      <div class="wrapper">
-        <img [src]="images[1]" alt="Random second slide">
-      </div>
-      <div class="carousel-caption">
-        <h3>Second Slide</h3>
-        <p> Check out Techiediaries</p>
-      </div>
-    </ng-template>
-    <ng-template ngbSlide>
-      <div class="wrapper">
-        <img [src]="images[2]"  alt="Random third slide">
-      </div>
-      <div class="carousel-caption">
-        <h3>Third Slide</h3>
-        <p>for full tutorial...</p>
-      </div>
-    </ng-template>
-  </ngb-carousel> -->
+<ngb-carousel *ngIf="carousel">
+	<ng-template ngbSlide>
+		<div class="picsum-img-wrapper">
+			<img [src]="carousel[0].src" alt="Random first slide" />
+		</div>
+		<div class="carousel-caption">
+			
+			<p style="font-weight: bold;">{{'slogan1' | translate}}</p>
+		</div>
+	</ng-template>
+	<ng-template ngbSlide>
+		<div class="picsum-img-wrapper">
+			<img [src]="carousel[1].src" alt="Random second slide" />
+		</div>
+		<div class="carousel-caption">
+			
+			<p style="font-weight: bold;">{{'slogan2' | translate}}</p>
+		</div>
+	</ng-template>
+	<ng-template ngbSlide>
+		<div class="picsum-img-wrapper">
+			<img [src]="carousel[2].src" alt="Random third slide" />
+		</div>
+		<div class="carousel-caption">
+			
+			<p style="font-weight: bold;">{{'slogan3' | translate}}</p>
+		</div>
+	</ng-template>
+</ngb-carousel>
