--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,9 +1,9 @@
 
-<div class="d-flex justify-content-center flex-column">
+<div class="container d-flex justify-content-center flex-column mt-3">
     <div>
         <app-slider></app-slider>
     </div>
-    <div class="container pb-4 mt-5 mb-5 bg-white" >
+    <div class="container pb-4 mt-3  mb-5 bg-white" >
         
         <div class="row d-flex justify-content-center">
             <div class="col-10 mt-4">
@@ -16,7 +16,35 @@
 
             </div>
         </div>
-        <div class="d-flex justify-content-center row mt-4" *ngFor="let i of arr | paginate: { itemsPerPage: 5, currentPage: p }; let g = index">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6"  *ngFor="let i of arr | paginate: { itemsPerPage: 8, currentPage: p }; let g = index">
+                    <div class="product-grid">
+                        <div class="product-image">
+                            <a href="#" class="image">
+                                <img class="pic-1" [src]="i.img">
+                                <img class="pic-2" [src]="i.img">
+                            </a>
+                            <a  (click)="addToCart(g)" class="product-like-icon" data-tip="Add to Wishlist">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <ul class="product-links">
+                                <li><a href="#"><i class="fa fa-search"></i></a></li>
+                                <li><a style="width: 60px;" (click)="Pay(g)">{{'Buy' | translate}}</a></li>
+                            </ul>
+                        </div>
+                        <div class="product-content">
+                            <h3 class="title" style="font-weight: bold;">{{i.name}}</h3>
+                            <div class="price d-flex">                            
+                                <h4 class="mr-1">${{i.Price}}</h4><span class="strike-text">${{(i.Price * 1.2) | number:'1.0-2'}}</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+        <!-- <div class="d-flex justify-content-center row mt-4" *ngFor="let i of arr | paginate: { itemsPerPage: 5, currentPage: p }; let g = index">
             <div class="col-md-10">
                 <div class="row p-2 bg-white border rounded">
                     <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" [src]="i.img"></div>
@@ -36,7 +64,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <pagination-controls class="d-flex justify-content-center" (pageChange)="p = $event"></pagination-controls>
     </div>
 </div>
