--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,3 +1,6 @@
+.navbar{
+  background-color: #021945;
+}
 select:required:invalid {
     color: gray;
   }
@@ -9,7 +12,7 @@ select:required:invalid {
   }
   .fl-left{
     
-    margin-left: 9.5%;
+    margin-left: 8.7%;
     display: flex;
     align-items: center;
   }
@@ -65,3 +68,5 @@ select:required:invalid {
     }
 
   }
+
+  
