--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,73 +1,79 @@
-<div class="container" style="width: 30%; margin-top: 5%;">
-    <div>
-        <button (click)="log()" class="btn btn-primary">{{'signin' | translate}}</button>
-        <button (click)="reg()" style="float: right;" class="btn btn-outline-primary">{{'register' | translate}}</button>
-    </div>
-    <div *ngIf="login" class="login mt-4">
-        <div class="d-flex flex-column mb-2">
-            <label >
-                <span>{{'email' | translate}}</span>
-            </label>
-            <input [ngClass]="email.invalid ? 'red-border' : ''" class="form-control shadow-none" [formControl]="email" type="email">
-            <span class="text-danger" *ngIf="email.invalid">{{'email-invalid' | translate}}</span>
-        </div>
-
-        <div class="d-flex flex-column mb-2">
-            <label >
-                <span>{{'password' | translate}}</span>
-            </label>
-            <input minlength="8" [ngClass]="password1.invalid ? 'red-border' : ''" class="form-control shadow-none" [formControl]="password1" type="password">
-            <span class="text-danger"  *ngIf="password1.invalid">{{'password-invalid' | translate}}</span>
-
-        </div>
-        <span class="text-danger"  *ngIf="nonExistent">{{'nonExistent' | translate}}</span>
-        <div class="mt-4">
-            <button class="btn btn-primary" (click)="save()">{{'login' | translate}}</button>
-        </div>
-    </div>
-    <div *ngIf="register" class="register mt-4" [formGroup]="form">
-        <div class="d-flex flex-row"  >
-
-            <div class="d-flex flex-column mb-2 w-100" style="margin-right: 20px;">
-                <label >
-                    <span>{{'name' | translate}}</span>
-                </label>
-                <input class="form-control" formControlName="name" type="text">
+<div class="container" style="width: 30%; margin-top: 7%;">
+    <div class="card t p-4 shadow p-3 mb-5 bg-white rounded">
+        <div class="card-body">
+            <div>
+                <button (click)="log()" class="btn btn-primary">{{'signin' | translate}}</button>
+                <button (click)="reg()" style="float: right;" class="btn btn-outline-primary">{{'register' | translate}}</button>
             </div>
-            <div class="d-flex flex-column mb-2 w-100">
-                <label >
-                    <span>{{'lastname' | translate}}</span>
-                </label>
-                <input class="form-control" formControlName="lastname" type="text">
-            </div>
-        </div>
-        <div class="d-flex flex-column mb-2">
-            <label >
-                <span>{{'email' | translate}}</span>
-            </label>
-            <input pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" [ngClass]="form.get('email')?.invalid ? 'red-border' : ''" class="form-control shadow-none" formControlName="email" type="email">
-            <span class="text-danger" *ngIf="form.get('email')?.invalid">{{'email-invalid' | translate}}</span>
-        </div>
+            <div *ngIf="login" class="login mt-4">
+                <div class="d-flex flex-column mb-2">
+                    <label >
+                        <span>{{'email' | translate}}</span>
+                    </label>
+                    <input [ngClass]="email.invalid ? 'red-border' : ''" class="form-control shadow-none" [formControl]="email" type="email">
+                    <span class="text-danger" *ngIf="email.invalid">{{'email-invalid' | translate}}</span>
+                </div>
         
-        <div class="d-flex flex-column mb-2">
-            <label >
-                <span>{{'password' | translate}}</span>
-            </label>
-            <input minlength="8" [ngClass]="this.form.get('password')?.invalid ? 'red-border' : ''" class="form-control shadow-none" formControlName="password" type="password">
-            <span class="text-danger"  *ngIf="this.form.get('password')?.invalid">{{'password-invalid' | translate}}</span>
+                <div class="d-flex flex-column mb-2">
+                    <label >
+                        <span>{{'password' | translate}}</span>
+                    </label>
+                    <input minlength="8" [ngClass]="password1.invalid ? 'red-border' : ''" class="form-control shadow-none" [formControl]="password1" type="password">
+                    <span class="text-danger"  *ngIf="password1.invalid">{{'password-invalid' | translate}}</span>
+        
+                </div>
+                <span class="text-danger"  *ngIf="nonExistent">{{'nonExistent' | translate}}</span>
+                <div class="mt-4">
+                    <button class="btn btn-primary" (click)="save()">{{'login' | translate}}</button>
+                </div>
+            </div>
+            <div *ngIf="register" class="register mt-4" [formGroup]="form">
+                <div class="d-flex flex-row"  >
+        
+                    <div class="d-flex flex-column mb-2 w-100" style="margin-right: 20px;">
+                        <label >
+                            <span>{{'name' | translate}}</span>
+                        </label>
+                        <input class="form-control" formControlName="name" type="text">
+                    </div>
+                    <div class="d-flex flex-column mb-2 w-100">
+                        <label >
+                            <span>{{'lastname' | translate}}</span>
+                        </label>
+                        <input class="form-control" formControlName="lastname" type="text">
+                    </div>
+                </div>
+                <div class="d-flex flex-column mb-2">
+                    <label >
+                        <span>{{'email' | translate}}</span>
+                    </label>
+                    <input pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" [ngClass]="form.get('email')?.invalid || emailCheck ? 'red-border' : ''" class="form-control shadow-none" formControlName="email" type="email">
+                    <span class="text-danger" *ngIf="form.get('email')?.invalid || emailCheck">{{'email-invalid' | translate}}</span>
+                </div>
+                
+                <div class="d-flex flex-column mb-2">
+                    <label >
+                        <span>{{'password' | translate}}</span>
+                    </label>
+                    <input minlength="8" [ngClass]="this.form.get('password')?.invalid || passCheck ? 'red-border' : ''" class="form-control shadow-none" formControlName="password" type="password">
+                    <span class="text-danger"  *ngIf="this.form.get('password')?.invalid || passCheck">{{'password-invalid' | translate}}</span>
+                </div>
+                <div class="d-flex flex-column mb-2">
+                    <label >
+                        <span>{{'confirm_password' | translate}}</span>
+                    </label>
+                    <input class="form-control" [ngClass]="this.form.get('confirm_password')?.invalid || passCheck2 ? 'red-border' : ''" formControlName="confirm_password" minlength="8" type="password"> 
+                    <span class="text-danger"  *ngIf="this.form.get('confirm_password')?.invalid || passCheck2">{{'password-invalid' | translate}}</span> 
+                    <span *ngIf="noEqualPass" class="text-danger ">{{'nonEqual' | translate}}</span> 
+         
+                </div>
+                <div class="mt-4">
+                    <button class="btn btn-primary" (click)="add()">{{'save' | translate}}</button>
+                </div>
+            </div>
         </div>
-        <div class="d-flex flex-column mb-2">
-            <label >
-                <span>{{'confirm_password' | translate}}</span>
-            </label>
-            <input class="form-control"  formControlName="confirm_password" minlength="8" type="password"> 
-            <span class="text-danger"  *ngIf="this.form.get('confirm_password')?.invalid">{{'password-invalid' | translate}}</span> 
-            <span *ngIf="noEqualPass" class="text-danger ">{{'nonEqual' | translate}}</span>          
-        </div>
-        <div class="mt-4">
-            <button class="btn btn-primary" (click)="add()">{{'save' | translate}}</button>
-        </div>
-    </div>
+    </div>    
+    
 </div>
 <div *ngIf="succesMsg" class="alert alert-success d-flex justify-content-center" role="alert">
     <span style="font-weight: bold;">{{'Success' | translate}}</span>
