feat-integration-to-spring

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
     
     <a class="navbar-brand fl-left" routerLink ="info"><h3><span class="text-success" style="font-weight: bold;">E</span><span style="font-weight: bold;" class="text-white">Shop</span></h3></a>
     <div class="d-m">
-      <button class="btn text-white" (click)="logout()"><img style="width: 25px;height: 25px;" src="https://icon-library.com/images/logout-icon-png/logout-icon-png-3.jpg" alt=""></button>
+      <button class="btn text-danger" (click)="logout()">Logout</button>
     </div>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <ul  class="navbar-nav mr-auto mt-2 mt-lg-0 ">
@@ -49,7 +49,7 @@
           </select>
 
           <div class="d-d">
-            <button class="btn text-white" (click)="logout()"><img style="width: 25px;height: 25px;" src="https://icon-library.com/images/logout-icon-png/logout-icon-png-3.jpg" alt=""></button>
+            <button class="btn text-danger" (click)="logout()">Logout</button>
           </div>
 
         </li>
