--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -34,7 +34,7 @@
                         <label >
                             <span>{{'name' | translate}}</span>
                         </label>
-                        <input class="form-control" formControlName="name" type="text">
+                        <input class="form-control" formControlName="firstname" type="text">
                     </div>
                     <div class="d-flex flex-column mb-2 w-100">
                         <label >
