--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -11,7 +11,7 @@
                     <h4 class="col-10">{{'add_product' | translate}}</h4>
                     <button class="btn btn-dark  col-2" routerLink="/editor">{{'back' | translate}}</button>
                 </div>
-                <div class="card-body" [formGroup]="form">
+                <div class="card-body" [formGroup]="form2">
                     <div class="row">
                         <div class="col d-flex flex-column mb-2 w-100" >
                             <label >
@@ -45,13 +45,13 @@
                             <label >
                                 <span>{{'price' | translate}}</span>
                             </label>
-                            <input class="form-control"  [ngClass]="this.form.get('Price')?.invalid ? 'red-border' : '' " formControlName="Price" type="number">
+                            <input class="form-control"  [ngClass]="this.form.get('price')?.invalid ? 'red-border' : '' " formControlName="price" type="number">
                         </div>
                         <div class="col d-flex flex-column mb-2 w-100">
                             <label >
                                 <span>{{'author' | translate}}</span>
                             </label>
-                            <input class="form-control"  [ngClass]="this.form.get('author')?.invalid ? 'red-border' : '' " formControlName="author" type="text">
+                            <input readonly class="form-control"  [ngClass]="this.form.get('author')?.invalid ? 'red-border' : '' " formControlName="author" type="text">
                         </div>
                     </div>
                     <div class="row">
@@ -68,7 +68,7 @@
                             <label >
                                 <span>{{'summery_en' | translate}}</span>
                             </label>
-                            <input class="form-control" formControlName="summery_en" type="text">
+                            <input class="form-control" formControlName="summery" type="text">
                         </div>
                         <div class="col d-flex flex-column mb-2 w-100" >
                           <label >
@@ -78,7 +78,7 @@
                       </div>
                       </div>
                     <div>
-                        <button (click)="add()" class="btn btn-primary" >{{'add' | translate}}</button>
+                        <button (click)="create()" class="btn btn-primary" >{{'add' | translate}}</button>
                     </div>
                     <div class="row">
 
@@ -123,9 +123,9 @@
                         <th scope="col" >{{'image' | translate}}
                           
                         </th>
-                        <th scope="col" (click)="sortList('Price')">{{'price' | translate}}
+                        <th scope="col" (click)="sortList('price')">{{'price' | translate}}
                             <span class="sortF">
-                              {{sortField =="Price" ? (sortOrder > 0 ? '↑' : '↓'):''}}
+                              {{sortField =="price" ? (sortOrder > 0 ? '↑' : '↓'):''}}
                             </span>
                           </th>
                         <th scope="col">{{'action' | translate}}</th>
@@ -138,14 +138,14 @@
                         <td>{{i.author}}</td>
                         <td>{{i.description}}</td>
                         <td>{{"..."}}</td>
-                        <td>{{i.Price +  " $"}}</td>
+                        <td>{{i.price +  " $"}}</td>
                         <td style="width: 150px;">
-                          <button (click)="edit(j)" class="btn btn-light me-2" data-toggle="modal" data-target="#exampleModal" >
+                          <button (click)="editProd(j)" class="btn btn-light me-2" data-toggle="modal" data-target="#exampleModal" >
                             <span class="material-symbols-outlined">
                             edit
                             </span>
                           </button>
-                          <button (click)="remove(j)" class="btn btn-light">
+                          <button (click)="delete(i.id)" class="btn btn-light">
                             <span class="material-symbols-outlined">
                             delete
                             </span>
@@ -164,6 +164,7 @@
 </div>
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -173,7 +174,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <p *ngIf="success2" class="text-success d-flex justify-content-center" style="font-weight: bold;text-align: center;">{{'Success' | translate}}</p>
+          <p *ngIf="success" class="text-success d-flex justify-content-center" style="font-weight: bold;text-align: center;">{{'Success' | translate}}</p>
           <form  class="register mt-4" [formGroup]="form">
             <div class="d-flex flex-row"  >
     
@@ -216,7 +217,7 @@
                     <label >
                         <span>{{'summery_en' | translate}}</span>
                     </label>
-                    <input class="form-control" formControlName="summery_en" type="text">
+                    <input class="form-control" formControlName="summery" type="text">
                 </div>
                 <div class="col d-flex flex-column mb-2 w-100" >
                     <label >
@@ -230,7 +231,7 @@
                 <label >
                     <span>{{'price' | translate}}</span>
                 </label>
-                <input class="form-control" formControlName="Price"  type="number">
+                <input class="form-control" formControlName="price"  type="number">
             </div>
             <div class="d-flex flex-column mb-2">
               <label >
