bug-fixes-alert box

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -68,4 +68,4 @@
     
   </nav>
 
-  
+  <app-alert-modal [error]="sessionExpiredMsg" *ngIf="sessionExpiredMsg" (close)="sessionExpiredMsg = null"></app-alert-modal>
