--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -5,8 +5,20 @@
 .red-border{
     border: 1px solid red;
 }
-.alert{
-    margin-top: 92%;
+.a{
     position: fixed;
+    top:92%;
     width: 100%;
+}
+
+.t{
+    margin-top: 30px;
+}
+.card{
+    border: 1px solid rgb(241, 238, 238);
+}
+
+.sortF{
+    color: white;
+    font-weight: bolder;
 }
