--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -30,13 +30,13 @@
                             </a>
                             <ul class="product-links">
                                 <li><a [routerLink]="['/info/edit',i.id]" [queryParams]="{id:i.id}"><i class="fa fa-search"></i></a></li>
-                                <li><a style="width: 60px;" (click)="Pay(g)">{{'Buy' | translate}}</a></li>
+                                <li><a style="width: 60px;" >{{'Buy' | translate}}</a></li>
                             </ul>
                         </div>
                         <div class="product-content">
                             <h3 class="title" style="font-weight: bold;">{{i.name}}</h3>
                             <div class="price d-flex">                            
-                                <h4 class="mr-1">${{i.Price}}</h4><span class="strike-text">${{(i.Price * 1.2) | number:'1.0-2'}}</span>
+                                <h4 class="mr-1">${{i.price}}</h4><span class="strike-text">${{(i.price * 1.2) | number:'1.0-2'}}</span>
                             </div>
                         </div>
                     </div>
