--- a/src/app/info/details/details.component.html
+++ b/src/app/info/details/details.component.html
@@ -4,10 +4,31 @@
             <div class="card t p-4">
                 <div class="card-body">
                     <div class="d-flex flex-column">
-                        <h4>{{'product-image' | translate}}</h4>
-                        <img [src]="details?.img">
+                        <h4 class="mb-4">{{'product-image' | translate}}</h4>
+                        <img class="rounded mb-4" [src]="details?.img">
+                        <div class="d-flex">
+                            <span style="font-weight: bold;">
+                                {{'author' | translate}}
+                                {{": "}}
+                            </span>
+                            <span class="text-success" style="font-weight: bold;">
+                                {{details?.author}}
+                            </span>
+                        </div>
+                        <div class="d-flex mb-4">
+                            <span style="font-weight: bold;">
+                                {{'price' | translate}}
+                                {{": "}}
+                            </span>
+                            <span  style="font-weight: bold;">
+                                {{details?.price + "$"}}
+                            </span>
+                        </div>
                         <div class="pb-4">
-                            <button style="width: 100%;" class="btn btn-success" >{{'Buy' | translate}}</button>
+                            <button style="width: 100%;" class="btn btn-success" (click)="pay(details?.price)" >{{'Buy' | translate}}</button>
+                        </div>
+                        <div class="pb-4">
+                            <button style="width: 100%;" (click)="addToCart(details?.id)" class="btn btn-primary" >{{'add_to_cart' | translate}}</button>
                         </div>
                     </div>
                 </div>
@@ -18,21 +39,23 @@
             <div class="card t p-4">
                 <div class="card-body">
                     <div class="d-flex flex-column">
-                        <h4>{{details?.name}}</h4>
-                        <p>{{details?.description}}</p>
-
-                        <div class="d-flex">
-                            <span style="font-weight: bold;">
-                                {{'author' | translate}}
-                                {{": "}}
-                            </span>
-                            <span class="text-success" style="font-weight: bold;">
-                                {{details?.author}}
-                            </span>
-                        </div>
+                        <h4 class="mb-4" *ngIf="!(lg1 || lg2)">{{details?.name}}</h4>
+                        <h4 class="mb-4" *ngIf="lg1 || lg2">{{details?.name_geo}}</h4>
+                        <h5 class="text-secondary">{{'description' | translate}}</h5>
+                        <p class="mb-4" *ngIf="!(lg1 || lg2)">{{details?.description}}</p>
+                        <p class="mb-4" *ngIf="lg1 || lg2">{{details?.description_geo}}</p>
+                        <h5 class="text-secondary">{{'summery' | translate}}</h5>
+                        <p *ngIf="!(lg1 || lg2)">{{details?.description}}</p>
+                        <p *ngIf="lg1 || lg2">{{details?.description_geo}}</p>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div><div *ngIf="succesMsg" class="alert alert-success d-flex justify-content-center" role="alert">
+    <span style="font-weight: bold;">{{'Success' | translate}}</span>
+</div>
+<div *ngIf="dangerMsg" class="alert alert-danger d-flex justify-content-center" role="alert">
+    <span style="font-weight: bold;">{{'not_enough' | translate}}</span>
 </div>
