--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -6,7 +6,7 @@
     <div class="container pb-4 mt-3  mb-5 bg-white" >
         
         <div class="row d-flex justify-content-center">
-            <div class="col-10 mt-4">
+            <div class="col-12 mt-4">
                 <label >{{'search_name' | translate}}</label>
                         <div class="input-group mb-3">
                             <input [formControl]="filterName" type="text"  class="form-control rounded"  placeholder="name" >
@@ -21,15 +21,15 @@
                 <div class="col-md-3 col-sm-6"  *ngFor="let i of arr | paginate: { itemsPerPage: 8, currentPage: p }; let g = index">
                     <div class="product-grid">
                         <div class="product-image">
-                            <a href="#" class="image">
+                            <a  class="image">
                                 <img class="pic-1" [src]="i.img">
                                 <img class="pic-2" [src]="i.img">
                             </a>
-                            <a  (click)="addToCart(g)" class="product-like-icon" data-tip="Add to Wishlist">
+                            <a  (click)="addToCart(i.id)" class="product-like-icon" data-tip="Add to Wishlist">
                                 <i class="fa fa-heart" aria-hidden="true"></i>
                             </a>
                             <ul class="product-links">
-                                <li><a [routerLink]="['/info/edit',i.id]" [queryParams]="{id:i.id}"><i class="fa fa-search"></i></a></li>
+                                <li><a [routerLink]="['/info/details',i.id]" ><i class="fa fa-search"></i></a></li>
                                 <li><a style="width: 60px;" (click)="pay(i.price)" >{{'Buy' | translate}}</a></li>
                             </ul>
                         </div>
@@ -44,28 +44,7 @@
                 
             </div>
         </div>
-        <!-- <div class="d-flex justify-content-center row mt-4" *ngFor="let i of arr | paginate: { itemsPerPage: 5, currentPage: p }; let g = index">
-            <div class="col-md-10">
-                <div class="row p-2 bg-white border rounded">
-                    <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" [src]="i.img"></div>
-                    <div class="col-md-6 mt-1">
-                        <h5>{{i.name}}</h5>
-                        <p class="text-justify text-truncate para mb-0">{{i.description}}<br><br></p>
-                        <p class="text-justify para mb-0" style="color: silver;">{{i.summery}}<br><br></p>
-                    </div>
-                    <div class="align-items-center align-content-center col-md-3 border-left mt-1">
-                        <div class="d-flex flex-row align-items-center">
-                            <h4 class="mr-1">${{i.Price}}</h4><span class="strike-text">${{(i.Price * 1.2) | number:'1.0-2'}}</span>
-                        </div>
-                        <h6 class="text-success">{{"author" | translate}}{{": " + i.author}}</h6>
-                        <div class="d-flex flex-column mt-1"><button (click)="Pay(g)" class="btn btn-primary btn-sm" type="button">{{"Buy" | translate}}</button></div>
-                        <div class="d-flex flex-column mt-1"><button  class="btn btn-primary btn-sm" type="button">{{"details" | translate}}</button></div>
-                        <div class="d-flex flex-column mt-1"><button (click)="addToCart(g)" class="btn btn-primary btn-sm" type="button">{{"add_to_cart" | translate}}</button></div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <pagination-controls class="d-flex justify-content-center" (pageChange)="p = $event"></pagination-controls>
+        <pagination-controls class="d-flex justify-content-center" *ngIf="arr.length > 8" (pageChange)="p = $event"></pagination-controls>
     </div>
 </div>
 <div *ngIf="succesMsg" class="alert alert-success d-flex justify-content-center" role="alert">
